# mi_ETE

./: .gitignore  AGENTS.md  CMakeLists.txt  README.md
.github/workflows/: ci.yml
client/android/: README.md  build.gradle  settings.gradle
client/android/app/: build.gradle  proguard-rules.pro
client/android/app/src/main/: AndroidManifest.xml
client/android/app/src/main/java/com/mi/client/: MainActivity.kt
client/windows/: CMakeLists.txt
client/windows/include/client/: client_runner.hpp  secure_types.hpp
client/windows/src/: client_runner.cpp  main.cpp  qt_main.cpp  qt_window.cpp  qt_window.hpp  secure_types.cpp
client/windows/tests/: CMakeLists.txt  secure_types_tests.cpp
configs/: client.yaml  server.yaml
scripts/: gen_certs.ps1  gen_certs.sh  package_artifacts.ps1  package_win.ps1  run_tests.ps1
server/: CMakeLists.txt
server/include/server/: auth_service.hpp  config.hpp  message_router.hpp  panel_service.hpp  server_app.hpp
server/src/: auth_service.cpp  config.cpp  main.cpp  message_router.cpp  panel_service.cpp  server_app.cpp
server/tests/: CMakeLists.txt  auth_service_tests.cpp  config_tests.cpp  data_route_tests.cpp  media_integration_tests.cpp
shared/: CMakeLists.txt
shared/include/mi/shared/crypto/: cert_store.hpp  tls_support.hpp  whitebox_aes.hpp
shared/include/mi/shared/net/: kcp_channel.hpp  tcp_tunnel.hpp
shared/include/mi/shared/proto/: messages.hpp
shared/include/mi/shared/secure/: obfuscated_value.hpp
shared/include/mi/shared/storage/: chat_history.hpp  disordered_file.hpp
shared/src/: cert_store.cpp  chat_history.cpp  disordered_file.cpp  kcp_channel.cpp  messages.cpp  placeholder.cpp  tcp_tunnel.cpp  tls_support.cpp  whitebox_aes.cpp
shared/tests/: CMakeLists.txt  chat_history_tests.cpp  disordered_file_tests.cpp  kcp_channel_tests.cpp  messages_tests.cpp  obfuscated_value_tests.cpp  session_list_tests.cpp  tcp_tunnel_tests.cpp  whitebox_aes_tests.cpp
